--- a/Lab2/Lab2.ioc
+++ b/Lab2/Lab2.ioc
@@ -142,3 +142,4 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
 isbadioc=false
+isbadioc=false
